implemented user search backend
